--- a/siddhartha/jungle/styles.css
+++ b/siddhartha/jungle/styles.css
@@ -4,35 +4,38 @@ body, html {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 #root {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
 
 .game-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     transition: background-color 0.3s ease;
 }
 
 .game-content {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    max-width: 100vh;
-    max-height: 100vw;
-    aspect-ratio: 1;
 }
 
 .game-content svg,
 .game-content img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
 }
 
 .square {
