--- a/siddhartha/jungle/styles.css
+++ b/siddhartha/jungle/styles.css
@@ -23,16 +23,8 @@ body, html {
     height: 100%;
 }
 
-.game-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.game-content svg,
-.game-content img {
+.game-container svg,
+.game-container img {
     width: 100%;
     height: 100%;
 }
