--- a/siddhartha/jungle/styles.css
+++ b/siddhartha/jungle/styles.css
@@ -23,8 +23,7 @@ body, html {
     height: 100%;
 }
 
-.game-container svg,
-.game-container img {
+.game-board {
     width: 100%;
     height: 100%;
 }
