--- a/rohan/run/style.css
+++ b/rohan/run/style.css
@@ -1,9 +1,10 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f5f5f5;
-    font-family: Arial,;
+	display: flex;
+	justify - content: center;
+	align - items: center;
+	height: 100 vh;
+	margin: 0;
+	background - color: #f5f5f5;
+	font - family: Arial,
+	;
 }
