--- a/rahul/fiftynine/style.css
+++ b/rahul/fiftynine/style.css
@@ -18,6 +18,6 @@ body {
   height: 80px;
   opacity: 0.9;
   border-radius: 12px;
-  cursor: pointer;
+  cursor: grab;
   transition: all 0.3s ease-in-out;
 }
