--- a/rahul/fiftynine/style.css
+++ b/rahul/fiftynine/style.css
@@ -1,20 +1,20 @@
 :root {
-  --tile-size: 80px;
-  --tile-gap: 20px;
+  --tile-size: 30px;
+  --tile-gap: 10px;
 }
 
 body {
   margin: 0;
   background-color: #2c2c2c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 #puzzle-container {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  height: 400px;
+  position: relative;
 }
 
 .tile {
@@ -22,7 +22,7 @@ body {
   width: var(--tile-size);
   height: var(--tile-size);
   opacity: 0.9;
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
