--- a/rahul/fiftynine/style.css
+++ b/rahul/fiftynine/style.css
@@ -1,6 +1,9 @@
 :root {
-  --tile-size: 30px;
-  --tile-gap: 10px;
+  --tile-size: 40px;
+  --tile-gap: 14px;
+  --move-delay: 500ms;
+  --transition-speed: 300ms;
+  --empty-percent: 50;
 }
 
 body {
@@ -22,7 +25,7 @@ body {
   width: var(--tile-size);
   height: var(--tile-size);
   opacity: 0.9;
-  border-radius: 12px;
+  border-radius: 14px;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all var(--transition-speed) ease-in-out;
 }
