--- a/rohan/seaweed/style.css
+++ b/rohan/seaweed/style.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #0D3B66;
+  border: 8px solid #0D3B66;
 }
 
 .grid-container {
@@ -29,9 +30,8 @@ body {
   padding: 2px;
   background-color: #0D3B66;
   aspect-ratio: 1;
-  height: 100%;
-  max-height: 100vh;
-  max-width: 100vh;
+  height: min(90vh, 90vw);
+  width: min(90vh, 90vw);
 }
 
 .grid-cell {
@@ -155,10 +155,5 @@ button:hover {
   .status-item {
     font-size: 18px;
     text-align: center;
-  }
-  
-  .grid-container {
-    max-height: calc(100vh - 200px);
-    max-width: calc(100vh - 200px);
   }
 }
