--- a/rohan/seaweed/style.css
+++ b/rohan/seaweed/style.css
@@ -18,7 +18,6 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: var(--primary-color);
   font-family: Arial;
 }
 
@@ -33,15 +32,15 @@ body {
 }
 
 .board-container {
-  background-color: var(--primary-color);
-  border: var(--border-width) solid var(--primary-color);
+  background-color: transparent;
+  border: var(--border-width) solid transparent;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: var(--grid-gap);
-  background-color: var(--primary-color);
+  background-color: transparent;
   width: 100%;
   height: 100%;
 }
